[package]
name = "acp-daemon"
version = "0.2.0"
edition = "2021"
authors = ["ACP Contributors"]
description = "ACP Daemon - HTTP REST API for codebase intelligence"
license = "MIT"
repository = "https://github.com/acp-protocol/acp-daemon"
keywords = ["ai", "daemon", "rest-api", "code-analysis"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "acpd"
path = "src/main.rs"

[dependencies]
# Core ACP library (use local path for development, version for release)
# acp = { path = "../acp-cli", package = "acp-protocol" }
acp = { version = "0.6.0", package = "acp-protocol" }

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
console = "0.15"

# Process management
daemonize = "0.5"
nix = { version = "0.29", features = ["signal", "process"] }

# File watching
notify = "8.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.15"
reqwest = { version = "0.12", features = ["json"] }
